@@ -21,14 +21,32 @@ options(error = NULL)
 options(warn = 2)
 options(warn = 0)
 
+## check for non-ASCII characters in examples:
+for (f in list.files("examples/", full.names = TRUE)) {
+  cat(f, "\n")
+  tools::showNonASCIIfile(f)
+}
+
+## check for non-ASCII characters in R files:
+for (f in list.files("R/", full.names = TRUE)) {
+  cat(f, "\n")
+  tools::showNonASCIIfile(f)
+}
+
+## check for non-ASCII characters in Rd files:
+for (f in list.files("man/", full.names = TRUE)) {
+  cat(f, "\n")
+  tools::showNonASCIIfile(f)
+}
+
+
+
 #install.packages("afex", dependencies = TRUE)
 #devtools::build()
 devtools::build_vignettes()
 clean_vignettes(pkg = ".")
 
 devtools::build(args = "--compact-vignettes=both")
-
-tools::showNonASCIIfile("examples/examples.aov_car.R")
 
 ### add packages
 
