@@ -175,7 +175,7 @@ obk_anova <- aov_car(value ~ treatment * gender + Error(id/(phase*hour)),
 
 str(obk_anova, 1, give.attr = FALSE)
 # List of 5
-#  $ anova_table:Classes ‘anova’ and 'data.frame':	15 obs. of  6 variables:
+#  $ anova_table:Classes 'anova' and 'data.frame':	15 obs. of  6 variables:
 #  $ aov        :List of 5
 #  $ Anova      :List of 14
 #  $ lm         :List of 13
